---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Bugfixes:
    - Fixed that several ore refining icons were improperly reskinned when materials added by Bob's Metal's, Chemicals and Intermediates or alternatively Angel's Industries were not present
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2021-09-29
  Features:
    - Updated crystallizer, ore crusher, ore flotation cell, ore sorting facility, ore refinery, hydro plant, salination plant, and clarifier with high resolution sprites
  Locale:
    - Corrected references to improper spelling "floatation", relating to the ore flotation cell
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2021-09-12
  Changes:
    - Revised Algae farm progression tiering when Sea Block 0.5.5 or later is enabled
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2021-08-14
  Features:
    - Revisions to all color masks for all entities, items, and icons are ongoing
    - Perceived brightness and contrast have been improved and oversaturation and color blowouts have been reduced for revised entities
    - Added progression tier adjustments when used with Sea Block for the chemical plants
    - Added numeral icons to the mud washing process recipes
  Changes:
    - Added backwards compatibility for older versions of Angel's Petrochem and Angel's Bioprocessing for progression tiering for electric boilers, chemical plants and algae farms
    - Revised icons for bronze, brass and gunmetal plates to improve visual separation
---------------------------------------------------------------------------------------------------
Version: 1.1.8
Date: 2021-07-01
  Features: