@@ -28,7 +28,7 @@ reskins-angels-do-angelsbioprocessing=Reskins the intermediates, recipes, and te
 # reskins-angels-do-angelsexploration=This string is not yet used; do not translate.
 reskins-angels-do-angelsindustries=Reskins the big chests and big logistic chests added by Angel's Industries.
 reskins-angels-do-angelspetrochem=Reskins the intermediates, recipes, and technologies, as well as the chemical plants, air filters, electrolysers, gas refineries, steam crackers and oil and gas separators added by Angel's Petrochemical Processing.
-reskins-angels-do-angelsrefining=Reskins the intermediates, recipes, and technologies as well as the crystallizer, electrowhinning cell, filtration unit, hydro plant, liquifier, ore crusher, ore flotation cell, ore leaching plant, ore powderizer, ore refinery, ore sorting facility, salination plant and the washing plant added by Angel's Refining.
+reskins-angels-do-angelsrefining=Reskins the intermediates, recipes, and technologies as well as the crystallizer, electrowhinning cell, filtration unit, hydro plant, liquefier, ore crusher, ore flotation cell, ore leaching plant, ore powderizer, ore refinery, ore sorting facility, salination plant and the washing plant added by Angel's Refining.
 reskins-angels-do-angelssmelting=Reskins the plates, ingots, ores and other intermediates, recipes, and technologies, as well as the casting machines, furnaces, ore processing machines, pellet presses, powder mixers and sintering ovens added by Angel's Smelting.
 # reskins-angels-do-angelsaddons-cab=This string is not yet used; do not translate.
 # reskins-angels-do-angelsaddons-mobility=This string is not yet used; do not translate.
